                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 18-07-2006 fixed: python scripts custom thumbs were not being used. 
 - 16-07-2006 added: <thumb> and <label> in .cut files.
 - 16-07-2006 added: existence for python libraries, python will now refuse to start and gives an error if libraries are missing
 - 15-07-2006 changed: the onAction method in a python window class so that an Action object is passes instead of a number
 - 15-07-2006 changed: [ 1518589 ] disabled filedirectories in filebrowser. This means playlists and archives are selectable.
 - 15-07-2006 changed: play on the remote now plays the dvd if the dvd bookmark is selected in the media windows.
 - 15-07-2006 added: skin.hassetting() infoLabel. (returns string localized("True") or "" for False)
 - 15-07-2006 fixed: Fadelabels scrolling did not scale.
 - 14-07-2006 fixed: adjusting volume while in bookmarks menu selected a bookmark.
 - 14-07-2006 changed: play disc on a video disc enqueues all items.
 - 14-07-2006 fixed: disable switch view button in shoutcast dirs.
 - 14-07-2006 fixed: [ 1520931 ] Custom movie thumbnail ignored when viewing from cast
 - 14-07-2006 changed: if you select a song in party mode, all songs with a earlier id is removed. more in line with itunes etc.
 - 14-07-2006 changed: folder.jpg is hidden in my pictures. cleaned up cbr/cbz support a bit.
 - 14-07-2006 added: a progress dialog is shown if loading a my program directory takes > 1.5secs.
 - 14-07-2006 fixed: wrong thumb assignment in the script window.
 - 14-07-2006 fixed: [ 1521878 ] if playing muisc, DVD disc can't be play
 - 13-07-2006 fixed: HttpApi GetCurrentlyPlaying thumb information should be more reliable